Se crea la sección html de los seguros

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <!-- Customized Bootstrap Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+
 </head>
 
 <body>
@@ -67,8 +68,23 @@
                     <div class="navbar-nav ml-auto py-0">
                         <a href="index.html" class="nav-item nav-link active">Inicio</a>
                         <a href="about.html" class="nav-item nav-link">Sobre Nosotros</a>
-                        <a href="service.html" class="nav-item nav-link">Seguros</a>
                         <a href="blog.html" class="nav-item nav-link">Nuestro Blog</a>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Seguros
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="vida.html">Vida</a></li>
+                                <li><a class="dropdown-item" href="salud.html">Salud</a></li>
+                                <li><a class="dropdown-item" href="vehiculo.html">Vehículo</a></li>
+                                <li><a class="dropdown-item" href="mascota.html">Mascotas</a></li>
+                                <li><a class="dropdown-item" href="vivienda.html">Vivienda</a></li>
+                                <li><a class="dropdown-item" href="internacional.html">Internacional</a></li>
+                                <li><a class="dropdown-item" href="#">Pensión</a></li>
+                                <li><a class="dropdown-item" href="#">Estudio</a></li>
+                                <li><a class="dropdown-item" href="#">PYME</a></li>
+                            </ul>
+                        </li>
                         <a href="contact.html" class="nav-item nav-link">Contacto</a>
                         </div>
                     </div>
@@ -88,7 +104,7 @@
                         <div class="p-3" style="max-width: 900px;">
                             <h4 class="text-white text-uppercase mb-md-3">Conoce nuestro</h4>
                             <h1 class="display-3 text-white mb-md-4">PORTAFOLIO DE VIDA</h1>
-                            <a href="service.html" class="btn btn-primary py-md-3 px-md-5 mt-2">Conoce más aquí</a>
+                            <a href="vida.html" class="btn btn-primary py-md-3 px-md-5 mt-2">Conoce más aquí</a>
                         </div>
                     </div>
                 </div>
@@ -372,7 +388,7 @@
             <h1 class="display-4 text-center mb-5">Las mejores para elegir</h1>
             <div class="row">
                 <div class="col-lg-4 mb-4">
-                    <div class="bg-light text-center mb-2 pt-2">
+                    <div class="bg-light text-center mb-2 pt-2 pb-5">
                         <img src="img/logo_allianz.png">
                         <div class="d-flex flex-column align-items-center py-1">
                             <p>Automóvil</p>
@@ -380,11 +396,11 @@
                             <p>Hogar y hogar deudores</p>
                             <p>PYMES</p>
                         </div>
-                        <button  type="button"  class="btn btn-secondary py-2 px-4" data-bs-toggle="modal" data-bs-target="#modalLabel">Cotiza aquí</button>
+                        <button  type="button"  class="btn btn-secondary py-2 px-4 text-light" data-bs-toggle="modal" data-bs-target="#modalLabel">Cotiza aquí</button>
                     </div>
                 </div>
                 <div class="col-lg-4 mb-4" >
-                    <div class="bg-light text-center mb-2 pt-2">
+                    <div class="bg-light text-center mb-2 pt-2  pb-5">
                         <img src="img/logo_sura.png">
                         <div class="d-flex flex-column align-items-center py-1">
                             <p>Fondo de ahorros</p>
@@ -396,7 +412,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 mb-4">
-                    <div class="bg-light text-center mb-2 pt-2">
+                    <div class="bg-light text-center mb-2 pt-2  pb-5">
                         <img src="img/logo_liberty.png">
                         <div class="d-flex flex-column align-items-center py-1">
                             <p>Póliza de enfermedades graves</p>
@@ -404,7 +420,7 @@
                             <p>Seguro de pensión</p>
                             <p>Seguro de educación</p>
                         </div>
-                        <button  type="button"  class="btn btn-secondary py-2 px-4" data-bs-toggle="modal" data-bs-target="#modalLabel">Cotiza aquí</button>
+                        <button  type="button"  class="btn btn-secondary py-2 px-4 text-light" data-bs-toggle="modal" data-bs-target="#modalLabel">Cotiza aquí</button>
                     </div>
                 </div>
             </div>
@@ -577,7 +593,7 @@
                 <div class="navbar-nav ml-auto py-0">
                     <a href="index.html" class="border-bottom text-white nav-item nav-link ">Inicio</a>
                     <a href="about.html" class="border-bottom text-white nav-item nav-link">Sobre Nosotros</a>
-                    <a href="service.html" class="border-bottom text-white nav-item nav-link">Seguros</a>
+                    <a href="vida.html" class="border-bottom text-white nav-item nav-link">Seguros</a>
                     <a href="blog.html" class="border-bottom text-white nav-item nav-link">Nuestro Blog</a>
                     <a href="contact.html" class="border-bottom text-white nav-item nav-link">Contacto</a>
                 </div>
