--- a/about.html
+++ b/about.html
@@ -20,6 +20,7 @@
 
     <!-- Libraries Stylesheet -->
     <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 
     <!-- Customized Bootstrap Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
@@ -53,7 +54,7 @@
 
 
     <!-- Navbar Start -->
-   <div class="container-fluid position-relative nav-bar p-0">
+    <div class="container-fluid position-relative nav-bar p-0">
         <div class="container-lg position-relative p-0 px-lg-3" style="z-index: 9;">
             <nav class="navbar navbar-expand-lg bg-white navbar-light py-3 py-lg-0 pl-3 pl-lg-5">
                 <a href="" class="navbar-brand text-center">
@@ -66,11 +67,26 @@
                     <div class="navbar-nav ml-auto py-0">
                         <a href="index.html" class="nav-item nav-link">Inicio</a>
                         <a href="about.html" class="nav-item nav-link active">Sobre Nosotros</a>
-                        <a href="service.html" class="nav-item nav-link">Seguros</a>
                         <a href="blog.html" class="nav-item nav-link">Nuestro Blog</a>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Seguros
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="#">Vida</a></li>
+                                <li><a class="dropdown-item" href="#">Salud</a></li>
+                                <li><a class="dropdown-item" href="#">Vehículo</a></li>
+                                <li><a class="dropdown-item" href="#">Mascotas</a></li>
+                                <li><a class="dropdown-item" href="#">Vivienda</a></li>
+                                <li><a class="dropdown-item" href="#">Internacional</a></li>
+                                <li><a class="dropdown-item" href="#">Pensión</a></li>
+                                <li><a class="dropdown-item" href="#">Estudio</a></li>
+                                <li><a class="dropdown-item" href="#">PYME</a></li>
+                            </ul>
+                        </li>
                         <a href="contact.html" class="nav-item nav-link">Contacto</a>
-                        </div>
                     </div>
+                </div>
             </nav>
         </div>
     </div>
@@ -147,7 +163,7 @@
     <div class="container-fluid py-5">
         <div class="container">
             <div class="row">
-                <div class="col-lg-7 m-0 my-lg-5 pt-0 pt-lg-5 pr-lg-5">
+                <div class="col-lg-7 m-0  pt-0 pt-lg-2 pr-lg-5">
                     <h6 class="text-secondary text-uppercase font-weight-medium mb-3">Nuestro recorrido</h6>
                     <h1 class="mb-4">¿Por qué elegirnos?</h1>
                     <p>Con más de 40 años en el mercado, nuestra empresa se destaca por ofrecer soluciones personalizadas,
@@ -175,6 +191,101 @@
     </div>
     <!-- Working Process End -->
 
+    <!-- Pricing Plan Start -->
+    <div class="container-fluid pt-5 pb-3">
+        <div class="container">
+            <h6 class="text-secondary text-uppercase text-center font-weight-medium mb-3">Compañías que trabajamos</h6>
+            <h1 class="display-4 text-center mb-5">Las mejores para elegir</h1>
+            <div class="row">
+                <div class="col-lg-4 mb-4">
+                    <div class="bg-light text-center mb-2 pt-2 pb-5">
+                        <img src="img/logo_allianz.png">
+                        <div class="d-flex flex-column align-items-center py-1">
+                            <p>Automóvil</p>
+                            <p>Salud Medicall y vida</p>
+                            <p>Hogar y hogar deudores</p>
+                            <p>PYMES</p>
+                        </div>
+                        <button  type="button"  class="btn btn-secondary py-2 px-4" data-bs-toggle="modal" data-bs-target="#modalLabel">Cotiza aquí</button>
+                    </div>
+                </div>
+                <div class="col-lg-4 mb-4" >
+                    <div class="bg-light text-center mb-2 pt-2 pb-5">
+                        <img src="img/logo_sura.png">
+                        <div class="d-flex flex-column align-items-center py-1 mt-5">
+                            <p>Fondo de ahorros</p>
+                            <p>Seguro para mascotas</p>
+                            <p>Seguro hogar</p>
+                            <p>Seguro arrendamiento</p>
+                        </div>
+                        <button  type="button"  class="btn btn-primary py-2 px-4" data-bs-toggle="modal" data-bs-target="#modalLabel">Cotiza aquí</button>
+                    </div>
+                </div>
+                <div class="col-lg-4 mb-4">
+                    <div class="bg-light text-center mb-2 pt-2 pb-5">
+                        <img src="img/logo_liberty.png">
+                        <div class="d-flex flex-column align-items-center py-1">
+                            <p>Póliza de enfermedades graves</p>
+                            <p>Seguro de vida </p>
+                            <p>Seguro de pensión</p>
+                            <p>Seguro de educación</p>
+                        </div>
+                        <button  type="button"  class="btn btn-secondary py-2 px-4" data-bs-toggle="modal" data-bs-target="#modalLabel">Cotiza aquí</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Pricing Plan End -->
+
+    <!---Modal Start -->
+    <div class="modal fade" id="modalLabel" tabindex="-1" aria-labelledby="modal" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5 " id="modal"><b>Envíanos tu datos</b></h1>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="mb-3">
+                            <label class="col-form-label text-secondary"><b>¿Qué seguro te gustaría cotizar?</b></label>
+                            <span class="text-danger">*</span>
+                            <select  id="selectSeguro" type="text" class="form-control border-dark text-primary" required >
+                                <option class="text-danger" ></option>
+                            </select>
+                        </div>
+                        <div class="mb-3">
+                            <label class="col-form-label  text-secondary"><b>¿Alguna compañía en específico?</b></label>
+                            <span >(Opcional)</span>
+                            <select  id="selectCompañia" type="text" class="form-control border-dark text-primary">
+                                <option ></option>
+                            </select>
+                        </div>
+                        <div class="mb-3">
+                            <label for="name" class="col-form-label  text-secondary"><b>Nombre y Apellido</b></label>
+                            <span class="text-danger">*</span>
+                            <input class="form-control border-dark text-primary" id="name" required >
+                        </div>
+                        <div class="mb-3">
+                            <label for="movil" class="col-form-label  text-secondary"><b>Número de Celular</b></label>
+                            <span class="text-danger">*</span>
+                            <input type="number" class="form-control border-dark text-primary" id="movil" required >
+                        </div>
+                        <div class="mb-3">
+                            <label for="email" class="col-form-label  text-secondary"> <b>Correo Electrónico</b></label>
+                            <span class="text-danger">*</span>
+                            <input type="email" class="form-control border-dark text-primary" id="email" required >
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-body text-center pt-3">
+                    <button type="button" class="btn btn-secondary p-2 mx-2" data-bs-dismiss="modal"><b>Cerrar</b></button>
+                    <button type="button" class="btn btn-primary p-2"><b>Envíar</b></button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!---Modal End -->
 
     <!-- Features Start -->
     <div class="container-fluid pt-5">
@@ -244,7 +355,7 @@
                 <div class="navbar-nav ml-auto py-0">
                     <a href="index.html" class="border-bottom text-white nav-item nav-link ">Inicio</a>
                     <a href="about.html" class="border-bottom text-white nav-item nav-link">Sobre Nosotros</a>
-                    <a href="service.html" class="border-bottom text-white nav-item nav-link">Seguros</a>
+                    <a href="vida.html" class="border-bottom text-white nav-item nav-link">Seguros</a>
                     <a href="blog.html" class="border-bottom text-white nav-item nav-link">Nuestro Blog</a>
                     <a href="contact.html" class="border-bottom text-white nav-item nav-link">Contacto</a>
                 </div>
@@ -270,6 +381,7 @@
     <script src="lib/waypoints/waypoints.min.js"></script>
     <script src="lib/counterup/counterup.min.js"></script>
     <script src="lib/owlcarousel/owl.carousel.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 
     <!-- Contact Javascript File -->
     <script src="mail/jqBootstrapValidation.min.js"></script>
