--- a/contact.html
+++ b/contact.html
@@ -66,8 +66,23 @@
                     <div class="navbar-nav ml-auto py-0">
                         <a href="index.html" class="nav-item nav-link">Inicio</a>
                         <a href="about.html" class="nav-item nav-link">Sobre Nosotros</a>
-                        <a href="service.html" class="nav-item nav-link">Seguros</a>
                         <a href="blog.html" class="nav-item nav-link">Nuestro Blog</a>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Seguros
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="vida.html">Vida</a></li>
+                                <li><a class="dropdown-item" href="#">Salud</a></li>
+                                <li><a class="dropdown-item" href="#">Vehículo</a></li>
+                                <li><a class="dropdown-item" href="#">Mascotas</a></li>
+                                <li><a class="dropdown-item" href="#">Vivienda</a></li>
+                                <li><a class="dropdown-item" href="#">Internacional</a></li>
+                                <li><a class="dropdown-item" href="#">Pensión</a></li>
+                                <li><a class="dropdown-item" href="#">Estudio</a></li>
+                                <li><a class="dropdown-item" href="#">PYME</a></li>
+                            </ul>
+                        </li>
                         <a href="contact.html" class="nav-item nav-link active">Contacto</a>
                     </div>
                 </div>
@@ -191,7 +206,7 @@
                 <div class="navbar-nav ml-auto py-0">
                     <a href="index.html" class="border-bottom text-white nav-item nav-link ">Inicio</a>
                     <a href="about.html" class="border-bottom text-white nav-item nav-link">Sobre Nosotros</a>
-                    <a href="service.html" class="border-bottom text-white nav-item nav-link">Seguros</a>
+                    <a href="vida.html" class="border-bottom text-white nav-item nav-link">Seguros</a>
                     <a href="blog.html" class="border-bottom text-white nav-item nav-link">Nuestro Blog</a>
                     <a href="contact.html" class="border-bottom text-white nav-item nav-link">Contacto</a>
                 </div>
@@ -217,6 +232,7 @@
     <script src="lib/waypoints/waypoints.min.js"></script>
     <script src="lib/counterup/counterup.min.js"></script>
     <script src="lib/owlcarousel/owl.carousel.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 
     <!-- Contact Javascript File -->
     <script src="mail/jqBootstrapValidation.min.js"></script>
