Se crea la página de pensión

--- a/about.html
+++ b/about.html
@@ -200,7 +200,7 @@
                 <div class="col-lg-4 mb-4">
                     <div class="bg-light text-center mb-2 pt-2 pb-5">
                         <img src="img/logo_allianz.png">
-                        <div class="d-flex flex-column align-items-center py-1">
+                        <div class="d-flex flex-column align-items-center py-1 mt-5">
                             <p>Automóvil</p>
                             <p>Salud Medicall y vida</p>
                             <p>Hogar y hogar deudores</p>
@@ -224,7 +224,7 @@
                 <div class="col-lg-4 mb-4">
                     <div class="bg-light text-center mb-2 pt-2 pb-5">
                         <img src="img/logo_liberty.png">
-                        <div class="d-flex flex-column align-items-center py-1">
+                        <div class="d-flex flex-column align-items-center py-1 mt-5">
                             <p>Póliza de enfermedades graves</p>
                             <p>Seguro de vida </p>
                             <p>Seguro de pensión</p>
@@ -355,7 +355,7 @@
                 <div class="navbar-nav ml-auto py-0">
                     <a href="index.html" class="border-bottom text-white nav-item nav-link ">Inicio</a>
                     <a href="about.html" class="border-bottom text-white nav-item nav-link">Sobre Nosotros</a>
-                    <a href="vida.html" class="border-bottom text-white nav-item nav-link">Seguros</a>
+
                     <a href="blog.html" class="border-bottom text-white nav-item nav-link">Nuestro Blog</a>
                     <a href="contact.html" class="border-bottom text-white nav-item nav-link">Contacto</a>
                 </div>
