--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                                 <li><a class="dropdown-item" href="mascota.html">Mascotas</a></li>
                                 <li><a class="dropdown-item" href="vivienda.html">Vivienda</a></li>
                                 <li><a class="dropdown-item" href="internacional.html">Internacional</a></li>
-                                <li><a class="dropdown-item" href="#">Pensión</a></li>
+                                <li><a class="dropdown-item" href="pension.html">Pensión</a></li>
                                 <li><a class="dropdown-item" href="#">Estudio</a></li>
                                 <li><a class="dropdown-item" href="#">PYME</a></li>
                             </ul>
@@ -148,7 +148,7 @@
     <div class="container-fluid contact-info mt-5 mb-4">
         <div class="container" style="padding: 0 30px;">
             <div class="row">
-                <div class="col-md-4 d-flex align-items-center justify-content-center bg-secondary mb-4 mb-lg-0" style="height: 100px;">
+                <div class="col-lg-4 d-flex align-items-center justify-content-center bg-secondary mb-4 mb-lg-0" style="height: 100px;">
                     <div class="d-inline-flex">
                         <i class="fa fa-2x fa-map-marker-alt text-white m-0 mr-3"></i>
                         <div class="d-flex flex-column">
@@ -157,7 +157,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 d-flex align-items-center justify-content-center bg-primary mb-4 mb-lg-0" style="height: 100px;">
+                <div class="col-lg-4 d-flex align-items-center justify-content-center bg-primary mb-4 mb-lg-0" style="height: 100px;">
                     <div class="d-inline-flex text-left">
                         <i class="fa fa-2x fa-envelope text-white m-0 mr-3"></i>
                         <div class="d-flex flex-column">
@@ -167,7 +167,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 d-flex align-items-center justify-content-center bg-secondary mb-4 mb-lg-0" style="height: 100px;">
+                <div class="col-lg-4 d-flex align-items-center justify-content-center bg-secondary mb-4 mb-lg-0" style="height: 100px;">
                     <div class="d-inline-flex text-left">
                         <i class="fa fa-2x fa-phone-alt text-white m-0 mr-3"></i>
                         <div class="d-flex flex-column">
@@ -593,7 +593,6 @@
                 <div class="navbar-nav ml-auto py-0">
                     <a href="index.html" class="border-bottom text-white nav-item nav-link ">Inicio</a>
                     <a href="about.html" class="border-bottom text-white nav-item nav-link">Sobre Nosotros</a>
-                    <a href="vida.html" class="border-bottom text-white nav-item nav-link">Seguros</a>
                     <a href="blog.html" class="border-bottom text-white nav-item nav-link">Nuestro Blog</a>
                     <a href="contact.html" class="border-bottom text-white nav-item nav-link">Contacto</a>
                 </div>
