--- a/pension.html
+++ b/pension.html
@@ -80,8 +80,8 @@
                             <li><a class="dropdown-item" href="#">Vehículo</a></li>
                             <li><a class="dropdown-item" href="#">Mascotas</a></li>
                             <li><a class="dropdown-item" href="#">Vivienda</a></li>
-                            <li><a class="dropdown-item active" href="#">Internacional</a></li>
-                            <li><a class="dropdown-item" href="#">Pensión</a></li>
+                            <li><a class="dropdown-item" href="#">Internacional</a></li>
+                            <li><a class="dropdown-item active" href="#">Pensión</a></li>
                             <li><a class="dropdown-item" href="#">Estudio</a></li>
                             <li><a class="dropdown-item" href="#">PYME</a></li>
                         </ul>
@@ -117,53 +117,31 @@
         <div class="row">
             <div class="col-lg-7 col-md-12 pb-1 mb-5">
                 <div class="d-flex flex-column  mb-4 px-4 align-content-lg-start">
-                    <img class="img_service" src="img/img_internacional.png">
+                    <img class="img_service" src="img/img_pension.png">
                 </div>
             </div>
             <div class="col-lg-5  col-md-12 pb-1">
-                <h2 class="text-center">SEGURO INTERNACIONAL</h2>
+                <h2 class="text-center">SEGURO DE PENSIÓN</h2>
                 <br>
-                <p>¿Vas de viaje al exterior?
-                    ¿Qué pasaría si tienes una emergencia médica?
-                    ¿Cuánto te puede costar los servicios médicos si no tienes un seguro para viajeros?
-                    Nosotros te podemos ofrecer el servicio de protección para que viajes seguro y disfrute de tu estancia en el exterior.</p>
-                <p>Este seguro es muy práctico para todo tipo de emergencia que te llegara a pasar estando de viaje en otro país. </p>
+                <p>Empieza jóven contratando seguro de pensión. Para que tu vejez sea una vejez digna, busca de nuestro servicio y nosotros
+                    te asesoramos.</p>
+                <p>Planifica tu ahorro siendo joven. Nuestro seguro de pensión te garantiza un dinero al momento de tu vejez, donde tu puedes elegir
+                    cómo quieres recibir ese ingreso, ya sea mensual o un único ingreso. Que tu vejez  sea digna gracias a tu ahorro de hoy. </p>
                 <div class="align-content-center align-items-center text-center justify-content-center">
                     <button  type="button"  class="btn btn-secondary mt-4 mt-md-2 text-light mb-md-5" data-bs-toggle="modal" data-bs-target="#modalLabel">Cotiza aquí</button>
                 </div>
             </div>
             <div class="col-lg-12 text-center mb-5">
-            <h2> ASISTENCIAS</h2>
+            <h2> AHORRA AHORA PARA TU VEJEZ</h2>
             </div>
-            <div class="container-fluid pt5 pb-3">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-4 col-md-12 pb-1 mb-5">
-                            <h3 class="text-secondary text-center">Gastos de atención médica</h3>
-                            <div class="text-center bg-light">
-                                <i class="bi fa-10x bi-clipboard2-heart-fill text-primary"></i>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-12 pb-1 mb-5">
-                            <h3 class="text-secondary text-center">Respaldo por cancelación de viaje</h3>
-                            <div class="text-center bg-light">
-                                 <i class="bi fa-10x bi-airplane-fill l text-primary mt-5 pb-4"></i>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-12 pb-1 mb-5">
-                            <h3 class="text-secondary text-center">Equipaje protegido  hasta 500 USD </h3>
-                            <div class="text-center bg-light">
-                                <i class="bi fa-10x bi-briefcase-fill text-primary"></i>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-12 pb-1 mb-5">
-                            <h3 class="text-secondary text-center">Respaldo por accidentes personales</h3>
-                            <div class="text-center bg-light">
-                                <i class="bi fa-10x bi-chat-heart-fill text-primary"></i>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+            <div class="col-lg-12 text-left mb-sm-5">
+                <ul >
+                    <li class="text-primary mb-3">La remuneración mensual que recibes se mantiene constante a lo largo del tiempo, ya que asumimos la responsabilidad del riesgo
+                        financiero a largo plazo. </li>
+                    <li class="text-primary mb-3">Los fondos que destines al seguro de pensión no forman parte de tus activos, por lo tanto, no pueden ser objeto de embargo.</li>
+                    <li class="text-primary mb-3">Dado que el seguro de pensiones es de carácter privado, tienes la oportunidad de optimizar el pago de impuestos. Esta disposición
+                        tributaria se encuentra estipulada en el artículo 126 - 1 del Estatuto Tributario y te sugerimos confirmarla con un asesor fiscal.</li>
+                </ul>
             </div>
         </div>
         </div>
