--- a/estudio.html
+++ b/estudio.html
@@ -80,9 +80,9 @@
                             <li><a class="dropdown-item" href="#">Vehículo</a></li>
                             <li><a class="dropdown-item" href="#">Mascotas</a></li>
                             <li><a class="dropdown-item" href="#">Vivienda</a></li>
-                            <li><a class="dropdown-item active" href="#">Internacional</a></li>
+                            <li><a class="dropdown-item" href="#">Internacional</a></li>
                             <li><a class="dropdown-item" href="#">Pensión</a></li>
-                            <li><a class="dropdown-item" href="#">Estudio</a></li>
+                            <li><a class="dropdown-item active" href="#">Estudio</a></li>
                             <li><a class="dropdown-item" href="#">PYME</a></li>
                         </ul>
                     </li>
@@ -117,17 +117,14 @@
         <div class="row">
             <div class="col-lg-7 col-md-12 pb-1 mb-5">
                 <div class="d-flex flex-column  mb-4 px-4 align-content-lg-start">
-                    <img class="img_service" src="img/img_internacional.png">
+                    <img class="img_service" src="img/img_estudio.png">
                 </div>
             </div>
             <div class="col-lg-5  col-md-12 pb-1">
-                <h2 class="text-center">SEGURO INTERNACIONAL</h2>
+                <h2 class="text-center">SEGURO PARA ESTUDIO</h2>
                 <br>
-                <p>¿Vas de viaje al exterior?
-                    ¿Qué pasaría si tienes una emergencia médica?
-                    ¿Cuánto te puede costar los servicios médicos si no tienes un seguro para viajeros?
-                    Nosotros te podemos ofrecer el servicio de protección para que viajes seguro y disfrute de tu estancia en el exterior.</p>
-                <p>Este seguro es muy práctico para todo tipo de emergencia que te llegara a pasar estando de viaje en otro país. </p>
+                <p>Ahorrar para la educación de tu hijo es una forma de asegurar su futuro. Con nuestro seguro educativo, ahora podrás crear un ahorro
+                    para ese gran momento de la universidad ¿Sabes cuánto te puedes ahorrar si empiezas con el seguro de educativo de tu hijo a temprana edad? </p>
                 <div class="align-content-center align-items-center text-center justify-content-center">
                     <button  type="button"  class="btn btn-secondary mt-4 mt-md-2 text-light mb-md-5" data-bs-toggle="modal" data-bs-target="#modalLabel">Cotiza aquí</button>
                 </div>
@@ -137,31 +134,14 @@
             </div>
             <div class="container-fluid pt5 pb-3">
                 <div class="container">
-                    <div class="row">
-                        <div class="col-lg-4 col-md-12 pb-1 mb-5">
-                            <h3 class="text-secondary text-center">Gastos de atención médica</h3>
-                            <div class="text-center bg-light">
-                                <i class="bi fa-10x bi-clipboard2-heart-fill text-primary"></i>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-12 pb-1 mb-5">
-                            <h3 class="text-secondary text-center">Respaldo por cancelación de viaje</h3>
-                            <div class="text-center bg-light">
-                                 <i class="bi fa-10x bi-airplane-fill l text-primary mt-5 pb-4"></i>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-12 pb-1 mb-5">
-                            <h3 class="text-secondary text-center">Equipaje protegido por pérdida</h3>
-                            <div class="text-center bg-light">
-                                <i class="bi fa-10x bi-briefcase-fill text-primary"></i>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-12 pb-1 mb-5">
-                            <h3 class="text-secondary text-center">Respaldo por accidentes personales</h3>
-                            <div class="text-center bg-light">
-                                <i class="bi fa-10x bi-chat-heart-fill text-primary"></i>
-                            </div>
-                        </div>
+                    <div class="col-lg-12 text-center">
+                        <ul class="list-group">
+                            <li class="list-group-item list-group-item-secondary  text-primary text-left mb-3"><b>Renta educativa universitaria:</b>
+                                Esta póliza te asegura el pago de la carrera universitaria que elija el beneficiario, sin tener en cuenta el lugar o la fecha en que se curse </li>
+                            <li class="list-group-item list-group-item-secondary  text-primary  text-left mb-3"> <b>Seguro por fallecimiento por cualquier motivo:</b>
+                                En el caso de que el asegurado fallezca antes del vencimiento del contrato, esta póliza asume los pagos correspondientes hasta que el beneficiario comience la universidad.</li>
+                            <li class="list-group-item list-group-item-secondary  text-primary  text-left mb-3"> <b>Seguro por invalidez total y permanente:</b> En el caso de que el asegurado fallezca antes del vencimiento del contrato, esta póliza asume los pagos correspondientes hasta que el beneficiario comience la universidad.</li>
+                        </ul>
                     </div>
                 </div>
             </div>
