--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                                 <li><a class="dropdown-item" href="vivienda.html">Vivienda</a></li>
                                 <li><a class="dropdown-item" href="internacional.html">Internacional</a></li>
                                 <li><a class="dropdown-item" href="pension.html">Pensión</a></li>
-                                <li><a class="dropdown-item" href="#">Estudio</a></li>
+                                <li><a class="dropdown-item" href="estudio.html">Estudio</a></li>
                                 <li><a class="dropdown-item" href="#">PYME</a></li>
                             </ul>
                         </li>
