Se crea la página de pyme

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                                 <li><a class="dropdown-item" href="internacional.html">Internacional</a></li>
                                 <li><a class="dropdown-item" href="pension.html">Pensión</a></li>
                                 <li><a class="dropdown-item" href="estudio.html">Estudio</a></li>
-                                <li><a class="dropdown-item" href="#">PYME</a></li>
+                                <li><a class="dropdown-item" href="pyme.html">PYME</a></li>
                             </ul>
                         </li>
                         <a href="contact.html" class="nav-item nav-link">Contacto</a>
