--- a/index.html
+++ b/index.html
@@ -235,12 +235,14 @@
             <h1 class="display-4 text-center mb-5">¿QUÉ OFRECEMOS?</h1>
             <div class="row">
                 <div class="col-lg-3 col-md-6 pb-1">
+                    <a href="#">
                     <div class="d-flex flex-column align-items-center justify-content-center text-center bg-light mb-4 px-4" style="height: 300px;">
                         <div class="d-inline-flex align-items-center justify-content-center bg-white shadow rounded-circle mb-4" style="width: 100px; height: 100px;">
                             <i class=" bi fa-3x bi-clipboard2-heart-fill text-secondary"></i>
                         </div>
                         <h4 class="font-weight-bold m-0">Seguro de vida</h4>
                     </div>
+                    </a>
                 </div>
                 <div class="col-lg-3 col-md-6 pb-1">
                     <div class="d-flex flex-column align-items-center justify-content-center text-center bg-light mb-4 px-4" style="height: 300px;">
