Se crea la página de contacto

--- a/about.html
+++ b/about.html
@@ -97,8 +97,8 @@
     <div class="page-header container-fluid bg-secondary pt-2 pt-lg-5 pb-2 mb-5">
         <div class="container py-5">
             <div class="row align-items-center py-4">
-                <div class="col-md-6 text-center text-md-left">
-                    <h1 class="mb-4 mb-md-0 text-white">Sobre Nosotros</h1>
+                <div class="col-md-12 text-lg-center text-md-center">
+                    <h1 class="mb-4 mb-md-0 text-white text-center">Sobre Nosotros</h1>
                 </div>
             </div>
         </div>
