--- a/contact.html
+++ b/contact.html
@@ -96,15 +96,8 @@
     <div class="page-header container-fluid bg-secondary pt-2 pt-lg-5 pb-2 mb-5">
         <div class="container py-5">
             <div class="row align-items-center py-4">
-                <div class="col-md-6 text-center text-md-left">
-                    <h1 class="mb-4 mb-md-0 text-white">Contact Us</h1>
-                </div>
-                <div class="col-md-6 text-center text-md-right">
-                    <div class="d-inline-flex align-items-center">
-                        <a class="btn text-white" href="">Home</a>
-                        <i class="fas fa-angle-right text-white"></i>
-                        <a class="btn text-white disabled" href="">Contact Us</a>
-                    </div>
+                <div class="col-md-12 text-lg-center text-md-center">
+                    <h1 class="mb-4 mb-md-0 text-white text-center">Contáctenos</h1>
                 </div>
             </div>
         </div>
@@ -123,15 +116,18 @@
                                 <div class="d-inline-flex align-items-center justify-content-center bg-white border border-light shadow rounded-circle mb-4" style="width: 100px; height: 100px; border-width: 15px !important;">
                                     <i class="fa fa-2x fa-map-marker-alt text-secondary"></i>
                                 </div>
-                                <h5 class="font-weight-medium m-0 mt-2">123 Street, New York, USA</h5>
+                                <h5 class="font-weight-medium m-0 mt-2"> Carrera 14b #148-24 <br>Bogotá Cedritos</h5>
                             </div>
                         </div>
                         <div class="col-md-4">
-                            <div class="d-flex flex-column align-items-center justify-content-center text-center mb-5">
+                            <div class="d-flex flex-column align-items-center justify-content-center  mb-5">
                                 <div class="d-inline-flex align-items-center justify-content-center bg-white border border-light shadow rounded-circle mb-4" style="width: 100px; height: 100px; border-width: 15px !important;">
                                     <i class="fa fa-2x fa-envelope-open text-secondary"></i>
                                 </div>
-                                <h5 class="font-weight-medium m-0 mt-2">info@example.com</h5>
+                                <div>
+                                <h5 class="font-weight-medium m-0 mt-2 ">euyenidyaver@eyeseguros.com</h5>
+                                <h5 class="font-weight-medium m-0 mt-2 ">edderrojas@eyeseguros.com</h5>
+                                </div>
                             </div>
                         </div>
                         <div class="col-md-4">
@@ -139,39 +135,56 @@
                                 <div class="d-inline-flex align-items-center justify-content-center bg-white border border-light shadow rounded-circle mb-4" style="width: 100px; height: 100px; border-width: 15px !important;">
                                     <i class="fa fa-2x fa-phone-alt text-secondary"></i>
                                 </div>
-                                <h5 class="font-weight-medium m-0 mt-2">+012 345 6789</h5>
+                                <h5 class="font-weight-medium m-0 mt-2">(315) 3060894</h5>
+                                <h5 class="font-weight-medium m-0 mt-2">(315) 3316809</h5>
                             </div>
                         </div>
                     </div>
+                    <br>
                 </div>
                 <div class="col-12">
                     <div class="contact-form">
                         <div id="success"></div>
-                        <form name="sentMessage" id="contactForm" novalidate="novalidate">
-                            <div class="form-row">
-                                <div class="col-md-6">
-                                    <div class="control-group">
-                                        <input type="text" class="form-control" id="name" placeholder="Your Name" required="required" data-validation-required-message="Please enter your name" />
-                                        <p class="help-block text-danger"></p>
+                        <form>
+                            <div class="container-fluid">
+                                <div class="row">
+                            <div class="col-lg-6 mb-3">
+                                <label for="name" class="col-form-label  text-secondary"><b>Nombre y Apellido</b></label>
+                                <span class="text-danger">*</span>
+                                <input class="form-control border-dark text-primary" id="name" required >
+                            </div>
+                            <div class="col-lg-6 mb-3">
+                                <label for="movil" class="col-form-label  text-secondary"><b>Número de Celular</b></label>
+                                <span class="text-danger">*</span>
+                                <input type="number" class="form-control border-dark text-primary" id="movil" required >
+                                <br>
+                            </div>
+                            <div class="col-lg-6 mb-3">
+                                <label for="email" class="col-form-label  text-secondary"> <b>Correo Electrónico</b></label>
+                                <span class="text-danger">*</span>
+                                <input type="email" class="form-control border-dark text-primary" id="email" required >
+                            </div>
+                                    <div class="col-lg-6 mb-3">
+                                        <label class="col-form-label text-secondary"><b>¿Qué seguro te gustaría cotizar?</b></label>
+                                        <span class="text-danger">*</span>
+                                        <select  id="selectSeguro" type="text" class="form-control border-dark text-primary" required >
+                                            <option class="text-danger" ></option>
+                                        </select>
+                                        <br>
+                                    </div>
+                                    <div class="col-12 mb-3">
+                                        <label class="col-form-label  text-secondary"><b>¿Alguna compañía en específico?</b></label>
+                                        <span >(Opcional)</span>
+                                        <select  id="selectCompañia" type="text" class="form-control border-dark text-primary">
+                                            <option ></option>
+                                        </select>
+                                        <br>
+                                    </div>
+                                    <div class="col-12 form-floating">
+                                        <label class="col-form-label  text-secondary"  for="floatingTextarea"> <b>Comentarios</b> </label>
+                                        <textarea class="form-control  border-dark text-primary" placeholder="" id="floatingTextarea"></textarea>
                                     </div>
                                 </div>
-                                <div class="col-md-6">
-                                    <div class="control-group">
-                                        <input type="email" class="form-control" id="email" placeholder="Your Email" required="required" data-validation-required-message="Please enter your email" />
-                                        <p class="help-block text-danger"></p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="control-group">
-                                <input type="text" class="form-control" id="subject" placeholder="Subject" required="required" data-validation-required-message="Please enter a subject" />
-                                <p class="help-block text-danger"></p>
-                            </div>
-                            <div class="control-group">
-                                <textarea class="form-control" rows="6" id="message" placeholder="Message" required="required" data-validation-required-message="Please enter your message"></textarea>
-                                <p class="help-block text-danger"></p>
-                            </div>
-                            <div>
-                                <button class="btn btn-primary py-3 px-5" type="submit" id="sendMessageButton">Send Message</button>
                             </div>
                         </form>
                     </div>
