--- a/blog.html
+++ b/blog.html
@@ -97,7 +97,7 @@
         <div class="container py-5">
             <div class="row align-items-center py-4">
                 <div class="col-lg-12 text-center">
-                    <h1 class="mb-4 mb-md-0 text-white text-center">NUESTRO CANAL DE YOUTUBE</h1>
+                    <h1 class="mb-4 mb-md-0 text-white text-center">Nuestro canal de YouTube</h1>
                 </div>
             </div>
         </div>
