Se deja ajustada las imagenes de los servicios y se agrega el botón de whastapp

--- a/about.html
+++ b/about.html
@@ -12,8 +12,11 @@
     <link href="img/EyElOGO.png" rel="icon">
 
     <!-- Google Web Fonts -->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
+     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Solway:wght@500&display=swap" rel="stylesheet">
 
     <!-- Font Awesome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css" rel="stylesheet">
@@ -54,10 +57,10 @@
 
 
     <!-- Navbar Start -->
-    <div class="container-fluid position-relative nav-bar p-0">
+    <div class=" container-fluid position-relative nav-bar p-0">
         <div class="container-lg position-relative p-0 px-lg-3" style="z-index: 9;">
             <nav class="navbar navbar-expand-lg bg-white navbar-light py-3 py-lg-0 pl-3 pl-lg-5">
-                <a href="" class="navbar-brand text-center">
+                <a href="" class="links navbar-brand text-center">
                     <h1>Euyenid & Edder</h1> <h3 class="">Asesores de seguros</h3>
                 </a>
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
@@ -65,26 +68,26 @@
                 </button>
                 <div class="collapse navbar-collapse justify-content-between px-3" id="navbarCollapse">
                     <div class="navbar-nav ml-auto py-0">
-                        <a href="index.html" class="nav-item nav-link">Inicio</a>
-                        <a href="about.html" class="nav-item nav-link active">Sobre Nosotros</a>
-                        <a href="blog.html" class="nav-item nav-link">Nuestro Blog</a>
+                        <a href="index.html" class="efect nav-item nav-link">Inicio</a>
+                        <a href="about.html" class="efect nav-item nav-link active">Sobre Nosotros</a>
+                        <a href="blog.html" class="efect nav-item nav-link">Nuestro Blog</a>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <a class="efect nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 Seguros
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Vida</a></li>
-                                <li><a class="dropdown-item" href="#">Salud</a></li>
-                                <li><a class="dropdown-item" href="#">Vehículo</a></li>
-                                <li><a class="dropdown-item" href="#">Mascotas</a></li>
-                                <li><a class="dropdown-item" href="#">Vivienda</a></li>
-                                <li><a class="dropdown-item" href="#">Internacional</a></li>
-                                <li><a class="dropdown-item" href="#">Pensión</a></li>
-                                <li><a class="dropdown-item" href="#">Estudio</a></li>
-                                <li><a class="dropdown-item" href="#">PYME</a></li>
+                                <li><a class="efect dropdown-item" href="vida.html">Vida</a></li>
+                                <li><a class="efect dropdown-item" href="salud.html">Salud</a></li>
+                                <li><a class="efect dropdown-item" href="vehiculo.html">Vehículo</a></li>
+                                <li><a class="efect dropdown-item" href="mascota.html">Mascotas</a></li>
+                                <li><a class="efect dropdown-item" href="vivienda.html">Vivienda</a></li>
+                                <li><a class="efect dropdown-item" href="internacional.html">Internacional</a></li>
+                                <li><a class="efect dropdown-item" href="pension.html">Pensión</a></li>
+                                <li><a class="efect dropdown-item" href="estudio.html">Estudio</a></li>
+                                <li><a class="efect dropdown-item" href="pyme.html">PYME</a></li>
                             </ul>
                         </li>
-                        <a href="contact.html" class="nav-item nav-link">Contacto</a>
+                        <a href="contact.html" class="efect nav-item nav-link">Contacto</a>
                     </div>
                 </div>
             </nav>
@@ -254,13 +257,7 @@
                                 <option class="text-danger" ></option>
                             </select>
                         </div>
-                        <div class="mb-3">
-                            <label class="col-form-label  text-secondary"><b>¿Alguna compañía en específico?</b></label>
-                            <span >(Opcional)</span>
-                            <select  id="selectCompañia" type="text" class="form-control border-dark text-primary">
-                                <option ></option>
-                            </select>
-                        </div>
+
                         <div class="mb-3">
                             <label for="name" class="col-form-label  text-secondary"><b>Nombre y Apellido</b></label>
                             <span class="text-danger">*</span>
@@ -331,49 +328,61 @@
     <!-- Features End -->
 
 
-    <!-- Footer Start -->
+ <!-- Footer Start -->
     <div class="container-fluid bg-primary text-white mt-5 pt-5 px-sm-3 px-md-5">
         <div class="row pt-5">
             <div class="col-lg-4 col-md-12 mb-5">
-               <h1 class="bg-white">Euyenid & Edder</h1> <h3 class="bg-white">Asesores de seguros</h3>
-                <p>Nuestra experiencia de más de 40 años. Nos caracteriza por prestar un servicio de alta calidad en asesoramiento.
-                  en seguros de salud, vida, vehículo y general.</p>
+                <h1 class="bg-white">Euyenid & Edder</h1>
+                <h3 class="bg-white">Asesores de seguros</h3>
+                <p>Nuestra experiencia de más de 40 años. Nos caracteriza por prestar un servicio de alta calidad en
+                    asesoramiento.
+                    en seguros de salud, vida, vehículo y general.</p>
                 <div class="d-flex justify-content-start mt-4">
-                    <a class="btn btn-outline-light rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href=""><i class="fab fa-youtube"></i></a>
-                    <a class="btn btn-outline-light rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="https://www.facebook.com/EyEseguros" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-outline-light rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="https://www.linkedin.com/company/eye-asesores-de-seguros/?viewAsMember=true" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-                    <a class="btn btn-outline-light rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="http://instagram.com/eyeseguros" target="_blank"><i class="fab fa-instagram"></i></a>                </div>
+                    <a class="btn btn-outline-light rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;"
+                       href="https://www.youtube.com/@EyESeguros" target="_blank"><i class="fab fa-youtube"></i></a>
+                    <a class="btn btn-outline-light rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;"
+                       href="https://www.facebook.com/EyEseguros" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                    <a class="btn btn-outline-light rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;"
+                       href="https://www.linkedin.com/company/eye-asesores-de-seguros/?viewAsMember=true" target="_blank"><i
+                            class="fab fa-linkedin-in"></i></a>
+                    <a class="btn btn-outline-light rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;"
+                       href="http://instagram.com/eyeseguros" target="_blank"><i class="fab fa-instagram"></i></a></div>
             </div>
             <div class="col-lg-4 col-md-12 mb-5 pl-5">
                 <h4 class="text-white mb-5">Ponerse en contacto</h4>
                 <p><i class="fa fa-map-marker-alt mr-2"></i>Carrera 14b #148-24 Bogotá Cedritos</p>
                 <p><i class="fa fa-phone-alt mr-2"></i>(315) 3060894 &nbsp (315) 3316809</p>
-                <p><i class="fa fa-envelope mr-2"></i>euyenidyaver@eyeseguros.com</p> <p class="px-4"> edderrojas@eyeseguros.com</p>
+                <p><i class="fa fa-envelope mr-2"></i>euyenidyaver@eyeseguros.com</p>
+                <p class="px-4"> edderrojas@eyeseguros.com</p>
             </div>
             <div class="col-lg-4 col-md-12 mb-5">
                 <h4 class="text-white mb-4">Enlaces rápidos</h4>
                 <div class="navbar-nav ml-auto py-0">
-                    <a href="index.html" class="border-bottom text-white nav-item nav-link ">Inicio</a>
-                    <a href="about.html" class="border-bottom text-white nav-item nav-link">Sobre Nosotros</a>
-
-                    <a href="blog.html" class="border-bottom text-white nav-item nav-link">Nuestro Blog</a>
-                    <a href="contact.html" class="border-bottom text-white nav-item nav-link">Contacto</a>
+                    <a href="index.html" class="efect border-bottom text-white nav-item nav-link ">Inicio</a>
+                    <a href="about.html" class="efect border-bottom text-white nav-item nav-link">Sobre Nosotros</a>
+                    <a href="blog.html" class="efect border-bottom text-white nav-item nav-link">Nuestro Blog</a>
+                    <a href="contact.html" class="efect border-bottom text-white nav-item nav-link">Contacto</a>
                 </div>
             </div>
         </div>
     </div>
     <div class="container-fluid bg-dark text-white py-4 px-sm-3 px-md-5">
         <p class="m-0 text-center text-white">
-            &copy; <a class="text-white font-weight-medium" href="#">Software Salazar</a> Reservados todos los derechos 2023.
+            &copy; <a class="text-white font-weight-medium" href="#">Software Salazar</a> Reservados todos los derechos
+            2023.
         </p>
     </div>
     <!-- Footer End -->
 
-
     <!-- Back to Top -->
-    <a href="#" class="btn btn-lg btn-primary back-to-top"><i class="fa fa-angle-double-up"></i></a>
+    <a href="#" class="btn btn-lg btn-primary back-to-top">
+        <i class="fa fa-angle-double-up"></i>
+    </a>
 
-
+    <!-- Link Whastapp-->
+    <a href="https://wa.me/573153060894" class="whatsapp-link"target="_blank">
+        <img  src="img/img_whastapp.png" class="bi fa-3x bi-whatsapp">
+    </a>
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
@@ -383,6 +392,7 @@
     <script src="lib/owlcarousel/owl.carousel.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 
+
     <!-- Contact Javascript File -->
     <script src="mail/jqBootstrapValidation.min.js"></script>
     <script src="mail/contact.js"></script>
@@ -390,5 +400,4 @@
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
 </body>
-
 </html>
