--- a/contact.html
+++ b/contact.html
@@ -3,17 +3,20 @@
 
 <head>
     <meta charset="utf-8">
-    <title>DRYME - Free Laundry Service Website Template</title>
+    <title>E & E Asesores de Seguros</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
 
     <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon">
+    <link href="img/NUEUVO%20LOGO_SIN%20BORDES.png" rel="icon">
 
     <!-- Google Web Fonts -->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
+     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Solway:wght@500&display=swap" rel="stylesheet">
 
     <!-- Font Awesome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css" rel="stylesheet">
@@ -23,6 +26,8 @@
 
     <!-- Customized Bootstrap Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+
 </head>
 
 <body>
@@ -53,10 +58,10 @@
 
 
     <!-- Navbar Start -->
-    <div class="container-fluid position-relative nav-bar p-0">
+    <div class=" container-fluid position-relative nav-bar p-0">
         <div class="container-lg position-relative p-0 px-lg-3" style="z-index: 9;">
             <nav class="navbar navbar-expand-lg bg-white navbar-light py-3 py-lg-0 pl-3 pl-lg-5">
-                <a href="" class="navbar-brand text-center">
+                <a href="" class="links navbar-brand text-center">
                     <h1>Euyenid & Edder</h1> <h3 class="">Asesores de seguros</h3>
                 </a>
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
@@ -64,26 +69,26 @@
                 </button>
                 <div class="collapse navbar-collapse justify-content-between px-3" id="navbarCollapse">
                     <div class="navbar-nav ml-auto py-0">
-                        <a href="index.html" class="nav-item nav-link">Inicio</a>
-                        <a href="about.html" class="nav-item nav-link">Sobre Nosotros</a>
-                        <a href="blog.html" class="nav-item nav-link">Nuestro Blog</a>
+                        <a href="index.html" class="efect nav-item nav-link">Inicio</a>
+                        <a href="about.html" class="efect nav-item nav-link">Sobre Nosotros</a>
+                        <a href="blog.html" class="efect nav-item nav-link">Nuestro Blog</a>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <a class="efect nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 Seguros
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="vida.html">Vida</a></li>
-                                <li><a class="dropdown-item" href="#">Salud</a></li>
-                                <li><a class="dropdown-item" href="#">Vehículo</a></li>
-                                <li><a class="dropdown-item" href="#">Mascotas</a></li>
-                                <li><a class="dropdown-item" href="#">Vivienda</a></li>
-                                <li><a class="dropdown-item" href="#">Internacional</a></li>
-                                <li><a class="dropdown-item" href="#">Pensión</a></li>
-                                <li><a class="dropdown-item" href="#">Estudio</a></li>
-                                <li><a class="dropdown-item" href="#">PYME</a></li>
+                                <li><a class="efect dropdown-item" href="vida.html">Vida</a></li>
+                                <li><a class="efect dropdown-item" href="salud.html">Salud</a></li>
+                                <li><a class="efect dropdown-item" href="vehiculo.html">Vehículo</a></li>
+                                <li><a class="efect dropdown-item" href="mascota.html">Mascotas</a></li>
+                                <li><a class="efect dropdown-item" href="vivienda.html">Vivienda</a></li>
+                                <li><a class="efect dropdown-item" href="internacional.html">Internacional</a></li>
+                                <li><a class="efect dropdown-item" href="pension.html">Pensión</a></li>
+                                <li><a class="efect dropdown-item" href="estudio.html">Estudio</a></li>
+                                <li><a class="efect dropdown-item" href="pyme.html">PYME</a></li>
                             </ul>
                         </li>
-                        <a href="contact.html" class="nav-item nav-link active">Contacto</a>
+                        <a href="contact.html" class="efect nav-item nav-link active">Contacto</a>
                     </div>
                 </div>
             </nav>
@@ -167,16 +172,8 @@
                                     <div class="col-lg-6 mb-3">
                                         <label class="col-form-label text-secondary"><b>¿Qué seguro te gustaría cotizar?</b></label>
                                         <span class="text-danger">*</span>
-                                        <select  id="selectSeguro" type="text" class="form-control border-dark text-primary" required >
-                                            <option class="text-danger" ></option>
-                                        </select>
-                                        <br>
-                                    </div>
-                                    <div class="col-12 mb-3">
-                                        <label class="col-form-label  text-secondary"><b>¿Alguna compañía en específico?</b></label>
-                                        <span >(Opcional)</span>
-                                        <select  id="selectCompañia" type="text" class="form-control border-dark text-primary">
-                                            <option ></option>
+                                        <select id="selectSeguro" class="form-control border-dark text-primary" required>
+                                            <option class="text-danger"></option>
                                         </select>
                                         <br>
                                     </div>
@@ -199,14 +196,16 @@
     <div class="container-fluid bg-primary text-white mt-5 pt-5 px-sm-3 px-md-5">
         <div class="row pt-5">
             <div class="col-lg-4 col-md-12 mb-5">
-               <h1 class="bg-white">Euyenid & Edder</h1> <h3 class="bg-white">Asesores de seguros</h3>
+                <h1 class="bg-white">Euyenid & Edder</h1> <h3 class="bg-white">Asesores de seguros</h3>
                 <p>Nuestra experiencia de más de 40 años. Nos caracteriza por prestar un servicio de alta calidad en asesoramiento.
-                  en seguros de salud, vida, vehículo y general.</p>
+                    en seguros de salud, vida, vehículo y general.</p>
                 <div class="d-flex justify-content-start mt-4">
-                     <a class="btn btn-outline-light rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="https://www.youtube.com/@EyESeguros" target="_blank"><i class="fab fa-youtube"></i></a>
+                    <a class="btn btn-outline-light rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;"  href="https://wa.me/573153060894"   target="_blank"><i class="bi bi-whatsapp"></i></a>
+                    <a class="btn btn-outline-light rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="https://www.youtube.com/@EyESeguros" target="_blank"><i class="fab fa-youtube"></i></a>
                     <a class="btn btn-outline-light rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="https://www.facebook.com/EyEseguros" target="_blank"><i class="fab fa-facebook-f"></i></a>
                     <a class="btn btn-outline-light rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="https://www.linkedin.com/company/eye-asesores-de-seguros/?viewAsMember=true" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-                    <a class="btn btn-outline-light rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="http://instagram.com/eyeseguros" target="_blank"><i class="fab fa-instagram"></i></a>                </div>
+                    <a class="btn btn-outline-light rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="http://instagram.com/eyeseguros" target="_blank"><i class="fab fa-instagram"></i></a>
+                </div>
             </div>
             <div class="col-lg-4 col-md-12 mb-5 pl-5">
                 <h4 class="text-white mb-5">Ponerse en contacto</h4>
@@ -217,11 +216,10 @@
             <div class="col-lg-4 col-md-12 mb-5">
                 <h4 class="text-white mb-4">Enlaces rápidos</h4>
                 <div class="navbar-nav ml-auto py-0">
-                    <a href="index.html" class="border-bottom text-white nav-item nav-link ">Inicio</a>
-                    <a href="about.html" class="border-bottom text-white nav-item nav-link">Sobre Nosotros</a>
-
-                    <a href="blog.html" class="border-bottom text-white nav-item nav-link">Nuestro Blog</a>
-                    <a href="contact.html" class="border-bottom text-white nav-item nav-link">Contacto</a>
+                    <a href="index.html" class="efect border-bottom text-white nav-item nav-link ">Inicio</a>
+                    <a href="about.html" class="efect border-bottom text-white nav-item nav-link">Sobre Nosotros</a>
+                    <a href="blog.html"    class="efect border-bottom text-white nav-item nav-link">Nuestro Blog</a>
+                    <a href="contact.html" class="efect border-bottom text-white nav-item nav-link">Contacto</a>
                 </div>
             </div>
         </div>
@@ -235,7 +233,16 @@
 
 
     <!-- Back to Top -->
-    <a href="#" class="btn btn-lg btn-primary back-to-top"><i class="fa fa-angle-double-up"></i></a>
+    <a href="#" class="btn btn-lg btn-primary back-to-top">
+        <i class="fa fa-angle-double-up"></i>
+    </a>
+
+    <!-- Link Whastapp-->
+    <a href="https://wa.me/573153060894" class="whatsapp-link"target="_blank">
+        <img  src="img/img_whastapp.png" class="bi fa-3x bi-whatsapp">
+    </a>
+
+
 
 
     <!-- JavaScript Libraries -->
@@ -246,6 +253,7 @@
     <script src="lib/counterup/counterup.min.js"></script>
     <script src="lib/owlcarousel/owl.carousel.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+
 
     <!-- Contact Javascript File -->
     <script src="mail/jqBootstrapValidation.min.js"></script>
